# curl_reap

./: .gitignore  .reap_geocode.json  LEGAL.md  MANIFEST.in  README.md  pyproject.toml
curl_reap/: __init__.py  adaptive.py  engine.py  geocode.py  http.py  parser.py  pipelines.py  spider.py  throttle.py
docs/: index.html
examples/: booking.py  quotes.py
tests/: test_adaptive.py  test_geocode.py  test_parser.py
