[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curl_reap"
version = "0.1.1"
description = "Reap the web: browser-grade TLS impersonation, self-healing selectors, and a concurrent crawl engine in one library."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anish", email = "anishfyi@gmail.com" }]
keywords = ["scraping", "crawler", "curl_cffi", "tls-fingerprint", "impersonate", "selectors", "lxml", "spider"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "curl_cffi>=0.7.0",
  "lxml>=5.0",
  "cssselect>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0", "twine>=5.0"]

[project.urls]
Homepage = "https://anishfyi.github.io/curl_reap/"
Documentation = "https://anishfyi.github.io/curl_reap/"
Repository = "https://github.com/anishfyi/curl_reap"
Issues = "https://github.com/anishfyi/curl_reap/issues"

[tool.hatch.build.targets.wheel]
packages = ["curl_reap"]

[tool.hatch.build.targets.sdist]
include = ["curl_reap", "README.md", "LICENSE", "assets/logo.svg"]
